package/lib/src/bindings.dart


  /// Declares a subscriber on the given key expression.
  ///
  /// Samples are posted to the Dart isolate via `Dart_PostCObject_DL` on
  /// the given native port. Each sample is sent as a `Dart_CObject` array
  /// of 4 elements: [keyexpr(string), payload(Uint8List), kind(int64),
  /// attachment(null or Uint8List)].
  ///
  /// @param session     Const pointer to a loaned session.
  /// @param subscriber  Pointer to an uninitialized z_owned_subscriber_t.
  /// @param keyexpr     Const pointer to a loaned key expression.
  /// @param dart_port   The Dart native port to post samples to.
  /// @return 0 on success, negative on failure.
  int zd_declare_subscriber(
    ffi.Pointer<ffi.Opaque> session,
    ffi.Pointer<ffi.Opaque> subscriber,
    ffi.Pointer<ffi.Opaque> keyexpr,
    int dart_port,
  ) {
    return _zd_declare_subscriber(session, subscriber, keyexpr, dart_port);
  }

  late final _zd_declare_subscriberPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ffi.Opaque>,
            ffi.Int64,
          )
        >
      >('zd_declare_subscriber');
  late final _zd_declare_subscriber = _zd_declare_subscriberPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Opaque>,
          ffi.Pointer<ffi.Opaque>,
          ffi.Pointer<ffi.Opaque>,
          int,
        )
      >();

  /// Drops (undeclares and frees) a subscriber.
  ///
  /// After this call the owned subscriber is in gravestone state.
  /// A second drop is a safe no-op.
  ///
  /// @param subscriber  Pointer to a z_owned_subscriber_t to drop.
  void zd_subscriber_drop(ffi.Pointer<ffi.Opaque> subscriber) {
    return _zd_subscriber_drop(subscriber);
  }

  late final _zd_subscriber_dropPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Opaque>)>>(
        'zd_subscriber_drop',
      );
  late final _zd_subscriber_drop = _zd_subscriber_dropPtr
      .asFunction<void Function(ffi.Pointer<ffi.Opaque>)>();

  /// Declares a background subscriber on the given key expression.
  ///
  /// Unlike a regular subscriber, a background subscriber has no handle --
  /// it lives until the session is closed. Samples are posted to the Dart
  /// native port. When the session closes and the background subscriber is
  /// dropped internally by zenoh-c, a null sentinel is posted to signal
  /// stream completion.
  ///
  /// @param session   Const pointer to a loaned session.
  /// @param key_expr  The key expression string.
  /// @param dart_port The Dart native port to post samples to.
  /// @return 0 on success, negative on failure.
  int zd_declare_background_subscriber(
    ffi.Pointer<ffi.Opaque> session,
    ffi.Pointer<ffi.Char> key_expr,
    int dart_port,
  ) {
    return _zd_declare_background_subscriber(session, key_expr, dart_port);
  }

  late final _zd_declare_background_subscriberPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ffi.Char>,
            ffi.Int64,
          )
        >
      >('zd_declare_background_subscriber');
  late final _zd_declare_background_subscriber =
      _zd_declare_background_subscriberPtr
          .asFunction<
            int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Char>, int)
          >();

  /// Returns the size of z_owned_publisher_t in bytes.
  int zd_publisher_sizeof() {
    return _zd_publisher_sizeof();
  }

  late final _zd_publisher_sizeofPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function()>>('zd_publisher_sizeof');
  late final _zd_publisher_sizeof = _zd_publisher_sizeofPtr
      .asFunction<int Function()>();

  /// Declares a publisher on the given key expression.
  ///
  /// @param session             Const pointer to a loaned session.
  /// @param publisher           Pointer to an uninitialized z_owned_publisher_t.
  /// @param keyexpr             Const pointer to a loaned key expression.
  /// @param encoding            MIME type string for default encoding (NULL = default).
  /// @param congestion_control  Congestion control strategy (-1 = default/block).
  /// @param priority            Message priority (-1 = default/data=5).
  /// @param is_express          Express mode (-1 = default, 0 = false, 1 = true).
  /// @return 0 on success, negative on failure.
  int zd_declare_publisher(
    ffi.Pointer<ffi.Opaque> session,
    ffi.Pointer<ffi.Opaque> publisher,
    ffi.Pointer<ffi.Opaque> keyexpr,
    ffi.Pointer<ffi.Char> encoding,
    int congestion_control,
    int priority,
    int is_express,
  ) {
    return _zd_declare_publisher(
      session,
      publisher,
      keyexpr,
      encoding,
      congestion_control,
      priority,
      is_express,
    );
  }

  late final _zd_declare_publisherPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            ffi.Int,
            ffi.Int8,
          )
        >
      >('zd_declare_publisher');
  late final _zd_declare_publisher = _zd_declare_publisherPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Opaque>,
          ffi.Pointer<ffi.Opaque>,
          ffi.Pointer<ffi.Opaque>,
          ffi.Pointer<ffi.Char>,
          int,
          int,
          int,
        )
      >();

  /// Obtains a const loaned reference to the publisher.
  ffi.Pointer<ffi.Opaque> zd_publisher_loan(ffi.Pointer<ffi.Opaque> publisher) {
    return _zd_publisher_loan(publisher);
  }

  late final _zd_publisher_loanPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Opaque> Function(ffi.Pointer<ffi.Opaque>)
        >
      >('zd_publisher_loan');
  late final _zd_publisher_loan = _zd_publisher_loanPtr
      .asFunction<ffi.Pointer<ffi.Opaque> Function(ffi.Pointer<ffi.Opaque>)>();

  /// Drops (undeclares and frees) a publisher.
  void zd_publisher_drop(ffi.Pointer<ffi.Opaque> publisher) {
    return _zd_publisher_drop(publisher);
  }

  late final _zd_publisher_dropPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Opaque>)>>(
        'zd_publisher_drop',
      );
  late final _zd_publisher_drop = _zd_publisher_dropPtr
      .asFunction<void Function(ffi.Pointer<ffi.Opaque>)>();

  /// Publishes data through the publisher.
  ///
  /// @param publisher   Const pointer to a loaned publisher.
  /// @param payload     Pointer to owned bytes (consumed via z_bytes_move).
  /// @param encoding    MIME type string for per-put encoding override (NULL = publisher default).
  /// @param attachment  Pointer to owned bytes for attachment (consumed if non-NULL, NULL = no attachment).
  /// @return 0 on success, negative on failure.
  int zd_publisher_put(
    ffi.Pointer<ffi.Opaque> publisher,
    ffi.Pointer<ffi.Opaque> payload,
    ffi.Pointer<ffi.Char> encoding,
    ffi.Pointer<ffi.Opaque> attachment,
  ) {
    return _zd_publisher_put(publisher, payload, encoding, attachment);
  }

  late final _zd_publisher_putPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Opaque>,
          )
        >
      >('zd_publisher_put');
  late final _zd_publisher_put = _zd_publisher_putPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Opaque>,
          ffi.Pointer<ffi.Opaque>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Opaque>,
        )
      >();

  /// Sends a DELETE through the publisher.
  int zd_publisher_delete(ffi.Pointer<ffi.Opaque> publisher) {
    return _zd_publisher_delete(publisher);
  }

  late final _zd_publisher_deletePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Opaque>)>>(
        'zd_publisher_delete',
      );
  late final _zd_publisher_delete = _zd_publisher_deletePtr
      .asFunction<int Function(ffi.Pointer<ffi.Opaque>)>();

  /// Returns the key expression of a publisher.
  ffi.Pointer<ffi.Opaque> zd_publisher_keyexpr(
    ffi.Pointer<ffi.Opaque> publisher,
  ) {
    return _zd_publisher_keyexpr(publisher);
  }

  late final _zd_publisher_keyexprPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Opaque> Function(ffi.Pointer<ffi.Opaque>)
        >
      >('zd_publisher_keyexpr');
  late final _zd_publisher_keyexpr = _zd_publisher_keyexprPtr
      .asFunction<ffi.Pointer<ffi.Opaque> Function(ffi.Pointer<ffi.Opaque>)>();

  /// Declares a background matching listener on the publisher.
  ///
  /// Matching status changes are posted to the Dart isolate via the given
  /// native port as Int64 values (1 = matching, 0 = not matching).
  ///
  /// @param publisher  Const pointer to a loaned publisher.
  /// @param dart_port  The Dart native port to post matching status to.
  /// @return 0 on success, negative on failure.
  int zd_publisher_declare_background_matching_listener(
    ffi.Pointer<ffi.Opaque> publisher,
    int dart_port,
  ) {
    return _zd_publisher_declare_background_matching_listener(
      publisher,
      dart_port,
    );
  }

  late final _zd_publisher_declare_background_matching_listenerPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Opaque>, ffi.Int64)>
      >('zd_publisher_declare_background_matching_listener');
  late final _zd_publisher_declare_background_matching_listener =
      _zd_publisher_declare_background_matching_listenerPtr
          .asFunction<int Function(ffi.Pointer<ffi.Opaque>, int)>();

  /// Gets the current matching status of a publisher.
  ///
  /// @param publisher  Const pointer to a loaned publisher.
  /// @param matching   Out parameter: filled with 0 (no match) or 1 (match).
  /// @return 0 on success, negative on failure.
  int zd_publisher_get_matching_status(
    ffi.Pointer<ffi.Opaque> publisher,
    ffi.Pointer<ffi.Int> matching,
  ) {
    return _zd_publisher_get_matching_status(publisher, matching);
  }

  late final _zd_publisher_get_matching_statusPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Int>)
        >
      >('zd_publisher_get_matching_status');
  late final _zd_publisher_get_matching_status =
      _zd_publisher_get_matching_statusPtr
          .asFunction<
            int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Int>)
          >();

  /// Copies the session's own ZID (16 bytes) into the provided buffer.
  ///
  /// @param session  Const pointer to a loaned session.
  /// @param out_id   Pointer to a 16-byte buffer to receive the ZID.
  void zd_info_zid(
    ffi.Pointer<ffi.Opaque> session,
    ffi.Pointer<ffi.Uint8> out_id,
  ) {
    return _zd_info_zid(session, out_id);
  }

  late final _zd_info_zidPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Uint8>)
        >
      >('zd_info_zid');
  late final _zd_info_zid = _zd_info_zidPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Uint8>)
      >();

  /// Converts a 16-byte ZID to its string representation.
  ///
  /// @param id   Pointer to a 16-byte ZID buffer.
  /// @param out  Pointer to an uninitialized z_owned_string_t to receive the result.
  void zd_id_to_string(ffi.Pointer<ffi.Uint8> id, ffi.Pointer<ffi.Opaque> out) {
    return _zd_id_to_string(id, out);
  }

  late final _zd_id_to_stringPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Opaque>)
        >
      >('zd_id_to_string');
  late final _zd_id_to_string = _zd_id_to_stringPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Opaque>)
      >();
